start: adding db_link tabel on transcript page